--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
     <title>Bioflex</title>
 </head>
 <body>
@@ -39,11 +40,101 @@
           style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-ii.jpg") 50% 50% no-repeat;
           background-size:cover;'
           >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>qaoreet id ddwrnec</h2>
+            <p>d sed rfhisus prefgum euam vulputate dignissim suspendisse</p>
+          </div>
           </div>
           <div class="slide" 
           style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-iii.jpg") 50% 50% no-repeat;
           background-size:cover;'
           >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-iv.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-v.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-vi.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-vii.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-viii.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-ix.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-x.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
+          </div>
+          <div class="slide" 
+          style='background:linear-gradient(0deg, rgba(2,2,2,0.7) 30%, rgba(16,16,16,0.3) 80%), url("images/slide-xi.jpg") 50% 50% no-repeat;
+          background-size:cover;'
+          >
+          <div class="caption">
+            <div class="topBar"></div>
+            <h2>laoreet id donec</h2>
+            <p>sed sed risus pretium quam vulputate dignissim suspendisse</p>
+          </div>
           </div>
         </div>
           <i class="fad fa-chevron-left" onclick="slideLeft()"></i>
