dropdown link adjustments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="companyName">
           <a href="/"><span>BioFlex</span></a>
       </div>
-      <div class="dropdown">
+      <div id="dropdown">
         <i class="fal fa-bars" onclick="dropdown()" id="hamburger"></i>
         <div class="dropLinks show" id="dropLinks">
           <a href="/">About</a>
