--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
         <a href="/">Reach Out</a>
       </div>
       </nav>
+      <section class='home'>
+        <div class='intro'>
+          <div class="text">
+            <h1>
+              Aliquet lectus, proin nibh nisl, condimentum.
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt.
+            </p>
+
+          </div>
+          <div class="buttons">
+            <button>Learn More About Us</button>
+            <button>We are hiring</button>
+          </div>
+        </div>
+        <div class="introImage">
+          <img src="images/teamwork.png" alt="">
+        </div>
+      </section>
   <script src="js/scripts.js"></script>  
 </body>
 </html>
