nav page overlay

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="/">Reach Out</a>
       </div>
       </nav>
+      <section class="overlayPage show" id="overlayPage"></section>
       <section class='home'>
         <div class='intro'>
           <div class="text">
