--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         <i class="fal fa-bars" onclick="dropdown()" id="hamburger"></i>
         <div class="deskLinks" id="deskLinks">
           <a href="/">About</a>
-          <a href="/">Products & Projects</a>
+          <a href="/">Products</a>
+          <a href="/">Upcoming Projects</a>
           <a href="/">Team</a>
           <a href="/">Reach Out</a>
         </div>
       </div>
       <div class="show mobLinks" id="mobLinks">
         <a href="/">About</a>
-        <a href="/">Products & Projects</a>
+        <a href="/">Products</a>
+        <a href="/">Upcoming Projects</a>
         <a href="/">Team</a>
         <a href="/">Reach Out</a>
       </div>
@@ -48,6 +50,52 @@
           <img src="images/teamwork.png" alt="">
         </div>
       </section>
+      <section class="about" id='about'>
+        <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+        <div class="pictionary">
+          <div class="pict">
+            <div class="pictImg">
+              <img src="images/miscellaneous.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+          <div class="pict">
+            <div class="pictImg">
+              <img src="images/business.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+          <div class="pict">
+            <div class="pictImg">
+              <img src="images/bars-chart.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+        </div>
+        <hr>
+        <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+        <div class="pictionary">
+          <div class="pict">
+            <div class="pictImg">
+              <img src="images/management.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+          <div class="pict">
+            <div class="pictImg">
+              <img src="images/business-ii.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+          <div class="pict">
+            <div class="pictImg">
+              <img src="images/checklists.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+        </div>
+      </section>
+    
   <script src="js/scripts.js"></script>  
 </body>
 </html>
