--- a/index.html
+++ b/index.html
@@ -95,6 +95,56 @@
           </div>
         </div>
       </section>
+
+      <section class="products">
+        <div class="prod">
+          <div class="prodImg">
+            <img src="images/dashboard.png" alt="">
+          </div>
+          <div class="prodDes">
+            <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="#">Learn more -></a>
+            <div><img src="images/target.png" alt=""></div>
+          </div>
+        </div>
+
+        <div class="prod">
+          <div class="prodImg">
+            <img src="images/dashboard.png" alt="">
+          </div>
+          <div class="prodDes">
+            <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="#">Learn more -></a>
+            <div><img src="images/target.png" alt=""></div>
+          </div>
+        </div>
+
+        <div class="prod">
+          <div class="prodImg">
+            <img src="images/dashboard.png" alt="">
+          </div>
+          <div class="prodDes">
+            <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="#">Learn more -></a>
+            <div><img src="images/target.png" alt=""></div>
+          </div>
+        </div>
+
+        <div class="prod">
+          <div class="prodImg">
+            <img src="images/dashboard.png" alt="">
+          </div>
+          <div class="prodDes">
+            <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="#">Learn more -></a>
+            <div><img src="images/target.png" alt=""></div>
+          </div>
+        </div>
+      </section>
     
   <script src="js/scripts.js"></script>  
 </body>
