--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a href="/">Products</a>
           <a href="/">Upcoming Projects</a>
           <a href="/">Team</a>
-          <a href="/">Reach Out</a>
+          <a href="/">Say Hi</a>
         </div>
       </div>
       <div class="show mobLinks" id="mobLinks">
@@ -25,7 +25,7 @@
         <a href="/">Products</a>
         <a href="/">Upcoming Projects</a>
         <a href="/">Team</a>
-        <a href="/">Reach Out</a>
+        <a href="/">Say Hi</a>
       </div>
       </nav>
       <section class="overlayPage show" id="overlayPage"></section>
@@ -142,6 +142,29 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
             <div><img src="images/target.png" alt=""></div>
+          </div>
+        </div>
+      </section>
+      <section class="upcoming">
+        <h2>Upcoming Projects</h2>
+        <div class="cardCont">
+          <div class="card">
+            <div><img src="images/checklists.png" alt=""></div>
+            <h3>Aliquet lectus, proin nibh nisl</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <button>Learn More</button>
+          </div>
+          <div class="card">
+            <div><img src="images/checklists.png" alt=""></div>
+            <h3>Aliquet lectus, proin nibh nisl</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <button>Learn More</button>
+          </div>
+          <div class="card">
+            <div><img src="images/checklists.png" alt=""></div>
+            <h3>Aliquet lectus, proin nibh nisl</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <button>Learn More</button>
           </div>
         </div>
       </section>
