--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </section>
       <section class="upcoming">
-        <h2>Upcoming Projects</h2>
+        <h2>Upcoming <span>Projects</span></h2>
         <div class="cardCont">
           <div class="card">
             <div><img src="images/checklists.png" alt=""></div>
@@ -165,6 +165,54 @@
             <h3>Aliquet lectus, proin nibh nisl</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <button>Learn More</button>
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <h2>Meet The <span>Team</span></h2>
+        <div class="members">
+          <div class="staff">
+            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffDes">
+              <h3>Mathew Bio</h3>
+              <p>Director of Pantry</p>
+            </div>
+          </div>
+        </div>
+        <div class="members">
+          <div class="staff">
+            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffDes">
+              <h3>Mathew Bio</h3>
+              <p>Director of Pantry</p>
+            </div>
+          </div>
+        </div>
+        <div class="members">
+          <div class="staff">
+            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffDes">
+              <h3>Mathew Bio</h3>
+              <p>Director of Pantry</p>
+            </div>
+          </div>
+        </div>
+        <div class="members">
+          <div class="staff">
+            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffDes">
+              <h3>Mathew Bio</h3>
+              <p>Director of Pantry</p>
+            </div>
+          </div>
+        </div>
+        <div class="members">
+          <div class="staff">
+            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffDes">
+              <h3>Mathew Bio</h3>
+              <p>Director of Pantry</p>
+            </div>
           </div>
         </div>
       </section>
