--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
           </div>
         </div>
       </section>
+      <section class="social">
+        <div class="twitter">
+          <a class="twitter-timeline" href="https://twitter.com/stelladare2?ref_src=twsrc%5Etfw">Tweets by stelladare2</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+      </section>
     
   <script src="js/scripts.js"></script>  
 </body>
