--- a/index.html
+++ b/index.html
@@ -221,6 +221,16 @@
           <a class="twitter-timeline" href="https://twitter.com/stelladare2?ref_src=twsrc%5Etfw">Tweets by stelladare2</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </section>
+
+      <footer>
+        <a href="/"><span>BioFlex</span></a>
+        <a href="/">About</a>
+        <a href="/">Products</a>
+        <a href="/">Upcoming Projects</a>
+        <a href="/">Team</a>
+        <a href="/">Say Hi</a>
+        <p>© 2020 Bioflex Inc.</p>
+      </footer>
     
   <script src="js/scripts.js"></script>  
 </body>
