--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bioflex</title>
 </head>
 <body>
-      <nav>
+      <nav id="nav">
         <div class="navNameIcon">
           <a href="/"><span>BioFlex</span></a>
         <i class="fal fa-bars" onclick="dropdown()" id="hamburger"></i>
@@ -28,7 +28,7 @@
         <a href="/">Say Hi</a>
       </div>
       </nav>
-      <section class="overlayPage show" id="overlayPage"></section>
+      <section class="overlayPage show" id="overlayPage" onclick="dropdown()"></section>
       <section class='home'>
         <div class='intro'>
           <div class="text">
