Projects section - responsiveness , whitespacing, alignments

--- a/index.html
+++ b/index.html
@@ -102,48 +102,57 @@
             <img src="images/dashboard.png" alt="">
           </div>
           <div class="prodDes">
+            <div class="prodDesCont">
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <div><img src="images/target.png" alt=""></div>
+            <img src="images/talking-men-ii.png" alt="">
           </div>
+        </div>
+      </div>
+
+        <div class="prod">
+          <div class="prodImg">
+            <img src="images/product-i.png" alt="">
+          </div>
+          <div class="prodDes">
+            <div class="prodDesCont">
+            <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="#">Learn more -></a>
+            <img src="images/talking-men-i.png" alt="">
+          </div>
+        </div>
         </div>
 
         <div class="prod">
           <div class="prodImg">
-            <img src="images/dashboard.png" alt="">
+            <img src="images/product-ii.png" alt="">
           </div>
           <div class="prodDes">
+            <div class="prodDesCont">
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <div><img src="images/target.png" alt=""></div>
+            <img src="images/talking-people-iv.png" alt="">
           </div>
+        </div>
         </div>
 
         <div class="prod">
           <div class="prodImg">
-            <img src="images/dashboard.png" alt="">
+            <img src="images/product-iii.jpg" alt="">
           </div>
           <div class="prodDes">
+            <div class="prodDesCont">
             <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <a href="#">Learn more -></a>
-            <div><img src="images/target.png" alt=""></div>
+            <img src="images/talking-girls-iii.png" alt="">
           </div>
+        </div>
         </div>
 
-        <div class="prod">
-          <div class="prodImg">
-            <img src="images/dashboard.png" alt="">
-          </div>
-          <div class="prodDes">
-            <h3>Aliquet lectus, proin nibh nisl, condimentum.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            <a href="#">Learn more -></a>
-            <div><img src="images/target.png" alt=""></div>
-          </div>
-        </div>
       </section>
       <section class="upcoming">
         <h2>Upcoming <span>Projects</span></h2>
@@ -216,11 +225,11 @@
           </div>
         </div>
       </section>
-      <section class="social">
+      <!-- <section class="social">
         <div class="twitter">
           <a class="twitter-timeline" href="https://twitter.com/stelladare2?ref_src=twsrc%5Etfw">Tweets by stelladare2</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
-      </section>
+      </section> -->
 
       <footer>
         <a href="/"><span>BioFlex</span></a>
