Upcoming projects section  - responsiveness , whitespacing, alignments

--- a/index.html
+++ b/index.html
@@ -158,22 +158,34 @@
         <h2>Upcoming <span>Projects</span></h2>
         <div class="cardCont">
           <div class="card">
-            <div><img src="images/checklists.png" alt=""></div>
+            <div class="cardImg">
+              <img src="images/bike.png" alt="">
+              <img src="images/car.png" alt="">
+              <img src="images/plane.png" alt="">
+            </div>
             <h3>Aliquet lectus, proin nibh nisl</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            <button>Learn More</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sit amet, consectetur adipiscing</p>
+            <button>Notify Me</button>
           </div>
           <div class="card">
-            <div><img src="images/checklists.png" alt=""></div>
+            <div class="cardImg">
+              <img src="images/ingredients.png" alt="">
+              <img src="images/grill.png" alt="">
+              <img src="images/truck.png" alt="">
+            </div>
             <h3>Aliquet lectus, proin nibh nisl</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            <button>Learn More</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sit amet, consectetur adipiscing</p>
+            <button>Notify Me</button>
           </div>
           <div class="card">
-            <div><img src="images/checklists.png" alt=""></div>
+            <div class="cardImg">
+              <img src="images/controller.png" alt="">
+              <img src="images/boxing.png" alt="">
+              <img src="images/trophy.png" alt="">
+            </div>
             <h3>Aliquet lectus, proin nibh nisl</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            <button>Learn More</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sit amet, consectetur adipiscing</p>
+            <button>Notify Me</button>
           </div>
         </div>
       </section>
