Team section  - responsiveness , whitespacing, alignments

--- a/index.html
+++ b/index.html
@@ -191,51 +191,53 @@
       </section>
       <section class="team">
         <h2>Meet The <span>Team</span></h2>
-        <div class="members">
+        <div class="teamCont">
+        <!-- <div class="members"> -->
           <div class="staff">
-            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffImg"><img src="images/staff-i.png" alt=""></div>
             <div class="staffDes">
-              <h3>Mathew Bio</h3>
-              <p>Director of Pantry</p>
+              <h3>proin<span>consectetur</span></h3>
+              <p>adipiscing elit sit amet</p>
             </div>
           </div>
-        </div>
-        <div class="members">
-          <div class="staff">
-            <div><img src="images/teamwork.png" alt=""></div>
-            <div class="staffDes">
-              <h3>Mathew Bio</h3>
-              <p>Director of Pantry</p>
-            </div>
+        <!-- </div> -->
+       <!-- <div class="members"> -->
+        <div class="staff">
+          <div class="staffImg"><img src="images/staff-ii.png" alt=""></div>
+          <div class="staffDes">
+            <h3>ipsum<span>dolor</span></h3>
+            <p>proin nibh nisl</p>
           </div>
         </div>
-        <div class="members">
-          <div class="staff">
-            <div><img src="images/teamwork.png" alt=""></div>
-            <div class="staffDes">
-              <h3>Mathew Bio</h3>
-              <p>Director of Pantry</p>
-            </div>
+      <!-- </div> -->
+       <!-- <div class="members"> -->
+        <div class="staff">
+          <div class="staffImg"><img src="images/staff-iii.png" alt=""></div>
+          <div class="staffDes">
+            <h3>adipiscing<span>dolor</span></h3>
+            <p>consectetur adipiscing elit</p>
           </div>
         </div>
-        <div class="members">
-          <div class="staff">
-            <div><img src="images/teamwork.png" alt=""></div>
-            <div class="staffDes">
-              <h3>Mathew Bio</h3>
-              <p>Director of Pantry</p>
-            </div>
+      <!-- </div> -->
+       <!-- <div class="members"> -->
+        <div class="staff">
+          <div class="staffImg"><img src="images/staff-iv.png" alt=""></div>
+          <div class="staffDes">
+            <h3>dolor<span>proin</span></h3>
+            <p>sit amet, consectetur adipiscing</p>
           </div>
         </div>
-        <div class="members">
+      <!-- </div> -->
+        <!-- <div class="members"> -->
           <div class="staff">
-            <div><img src="images/teamwork.png" alt=""></div>
+            <div class="staffImg"><img src="images/staff-v.png" alt=""></div>
             <div class="staffDes">
-              <h3>Mathew Bio</h3>
-              <p>Director of Pantry</p>
+              <h3>amet<span>lectus</span></h3>
+              <p>amet, consectetur adipiscing</p>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
+      </div>
       </section>
       <!-- <section class="social">
         <div class="twitter">
