Social section  - responsiveness , whitespacing, alignments

--- a/index.html
+++ b/index.html
@@ -239,11 +239,35 @@
         <!-- </div> -->
       </div>
       </section>
-      <!-- <section class="social">
+      <section class="social">
+        <h2>Say Hello To Us</h2>
+        <div class="socialCont">
         <div class="twitter">
-          <a class="twitter-timeline" href="https://twitter.com/stelladare2?ref_src=twsrc%5Etfw">Tweets by stelladare2</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" data-height='520' data-chrome="nofooter">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <div class="twitterButtons">
+          <a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @TwitterDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+          <!-- <a class="twitter-timeline" href="https://twitter.com/stelladare2?ref_src=twsrc%5Etfw" data-height='420' data-tweet-limit="10" data-chrome="nofooter noheader">Tweets by stelladare2</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
         </div>
-      </section> -->
+        <div class="youtube">
+          <div class="iframeCont">
+          <iframe src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <!-- <div class="g-ytsubscribe" data-channel="GoogleDevelopers" data-layout="default" data-count="default"></div> -->
+        <div class="ytsubscribe">
+        <iframe frameborder="0" id="fr" scrolling="no" 
+src="https://www.youtube.com/subscribe_widget?p=GoogleDevelopers" 
+style="border: 0px;  background:#FFF; overflow-x: hidden; 
+overflow-y: hidden; "></iframe>
+        </div>
+      </div>
+
+        <div class="email">
+          <button><span>@</span><span>bioflex@gmail.com</span></button>
+        </div>
+        </div>
+      </section>
 
       <footer>
         <a href="/"><span>BioFlex</span></a>
@@ -255,6 +279,7 @@
         <p>© 2020 Bioflex Inc.</p>
       </footer>
     
-  <script src="js/scripts.js"></script>  
+  <script src="js/scripts.js"></script>
+  <script src="https://apis.google.com/js/platform.js"></script>  
 </body>
 </html>
